# edgeyolo

./: .gitignore  .gitmodules  LICENSE  README.md  requirements-wrapper.txt
demos/: install_dependencies.sh
demos/cpp/deepSightAI/: .gitignore  CMakeLists.txt  build_desktop.sh  build_headless.sh  build_rv1106.sh
demos/cpp/deepSightAI/cmake/: toolchain-rv1106.cmake
demos/cpp/deepSightAI/config/: person_forklift_config.yaml
demos/cpp/deepSightAI/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
demos/cpp/deepSightAI/src/: app_config.cpp  app_config.h  debug_log.cpp  debug_log.h  main.cpp  main_headless.cpp
demos/cpp/deepSightAI/src/capture/: CMakeLists.txt  CaptureFactory.cpp  CaptureFactory.h  GenericCapture.cpp  GenericCapture.h  ICapture.h  capture_plan.md  rockchip_capture.cpp  rockchip_capture.h  rv1106_capture.cpp  rv1106_capture.h
demos/cpp/deepSightAI/src/headless/: headless_app.cpp  headless_app.h  web_config.cpp  web_config.h
demos/cpp/deepSightAI/src/inference/: DetectorFactory.cpp  DetectorFactory.h  EdgeYoloPostProcessor.h  EdgeYoloPreProcessor.h  IDetector.h  IPostProcessor.h  IPreProcessor.h  ModelMetaLoader.h  OnnxDetector.cpp  OnnxDetector.h  OpenVinoDetector.cpp  OpenVinoDetector.h  RknnDetector.cpp  RknnDetector.h  edgeyolo_bridge.cpp  edgeyolo_bridge.h  rknn_inference.md
demos/cpp/deepSightAI/src/ui/: classlabelsdialog.cpp  classlabelsdialog.h  configdialog.cpp  configdialog.h  mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h
demos/cpp/deepSightAI/temp/Linux_x86_64/tbb/: ie_dependency.info
demos/cpp/deepSightAI/tests/: CMakeLists.txt  test_comment_preservation.cpp  test_config_log.cpp  test_extension_check.cpp
demos/cpp/edgeyolo_qt_gui/: CMakeLists.txt
demos/cpp/edgeyolo_qt_gui/assets/: assets.qrc
demos/cpp/edgeyolo_qt_gui/config/: person_forklift_config.yaml
demos/cpp/edgeyolo_qt_gui/src/: debug_log.cpp  debug_log.h  main.cpp
demos/cpp/edgeyolo_qt_gui/src/inference/: DetectorFactory.cpp  DetectorFactory.h  IDetector.h  OnnxDetector.cpp  OnnxDetector.h  OpenVinoDetector.cpp  OpenVinoDetector.h  RknnDetector.cpp  RknnDetector.h  edgeyolo_bridge.cpp  edgeyolo_bridge.h
demos/cpp/edgeyolo_qt_gui/src/ui/: classlabelsdialog.cpp  classlabelsdialog.h  configdialog.cpp  configdialog.h  mainwindow.cpp  mainwindow.h  videowidget.cpp  videowidget.h
models/person_forklift/e300_b16_i416x416_tiny/: log.txt  train_runtime.yaml
models/person_forklift/e300_b16_i640x640_tiny/: log.txt  train_runtime.yaml
plans/: UI_plan.md
scripts/: README_PIPELINE.md  download_youtube.py  export_onnx.py  export_openvino.py  export_rknn.py  init_repo_with_submodule.sh  pipeline.py  prepare_combined_voc.py
tasks/: tasks.json
